# src/router/QueryRouter.js
@@ -6,5 +6,5 @@ router.get("/query", Controller.queryDepositQueue);
 router.put("/update", Controller.updateRootDeposit);
 router.get("/proof/:key", Controller.genereateUserProof);
 router.get("/infor/:address", Controller.queryDepositInforByUserAddress);
-
+router.delete("/db", Controller.deleteDb);
 module.exports = router;
